--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "description": "Modular agent framework for on-chain activity monitoring.",
   "main": "index.js",
   "scripts": {
-    "dev": "echo 'Running dev mode...'"
+    "dev": "ts-node scripts/dev-agent.ts",
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "build:clean": "npm run clean && npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "start": "node dist/index.js",
+    "api": "ts-node api/server.ts",
+    "validate": "ts-node scripts/validate-agent.ts",
+    "generate:agent": "ts-node scripts/generate-agent.ts",
+    "generate:signal": "ts-node scripts/generate-signal.ts",
+    "demo:registry": "ts-node scripts/demo-signal-registry.ts",
+    "demo:memory": "ts-node scripts/demo-memory-system.ts"
   },
   "keywords": [
     "agent",
@@ -14,5 +26,21 @@
     "framework"
   ],
   "license": "MIT",
-  "author": "EremosCore"
+  "author": "EremosCore",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
