--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,15 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "declaration": true
   },
-  "include": ["./agents", "./types", "./utils"]
+  "include": ["./agents", "./types", "./utils", "./scripts"],
+  "exclude": ["./dist", "./node_modules", "./tests"]
 }
